# pepper_robot

pepper_actuators_py/: CMakeLists.txt  package.xml  setup.py
pepper_actuators_py/launch/: pepper_animation_player.launch  pepper_move_to.launch  pepper_people_follow.launch  pepper_security_distance.launch  pepper_tts.launch
pepper_actuators_py/nodes/: animation_player.py  force_driving_pose.py  move_to.py  naoqi_tts.py  people_follow.py  security_distance.py  wakeup.py
pepper_actuators_py/src/pepper_actuators/: naoqi_tts.py  pepper_animation_player.py  pepper_move_to.py  pepper_people_follow.py  pepper_wakeup.py
pepper_bringup/: package.xml
pepper_bringup/launch/: laser_merger.launch  object_detetection_find_object.launch  pepper_custom_py.launch  pepper_dcm.launch  pepper_full.launch  perception.launch.xml  pointcloud.launch
pepper_description/urdf/pepper1.0_generated_urdf/: pepper.urdf  pepperGazebo.xacro  pepper_fingers.xacro  pepper_legs.xacro  pepper_visual_collisions.xacro
pepper_robot/: package.xml
pepper_sensors_py/: CMakeLists.txt  setup.py
pepper_sensors_py/launch/: camera_bottom.launch  camera_depth.launch  camera_front.launch  laser.launch  pepper_people_perception.launch  pepper_position.launch  pepper_speecrec.launch  sonar.launch
pepper_sensors_py/nodes/: laser.py  people_perception.py  pepper_speechrec.py  position.py
pepper_sensors_py/share/: nao_camera_bottom_640x480.yaml  nao_camera_depth.yaml  nao_camera_top_640x480.yaml
pepper_sensors_py/src/pepper_sensors/: pepper_camera.py  pepper_people_perception.py  pepper_position.py  pepper_speechrec.py  vocabulary.py
